<resources>
    <string name="app_name">MeetAbility</string>
    <string name="action_logout">Logout</string>
    <string name="action_bugreport">Bug-Report</string>
    <string name="action_userreport">User-Report</string>
    <string name="create_activity">Activity anlegen</string>
    <string name="search_activty">Activity suchen</string>
    <string name="show_profile">Profil</string>
    <string name="show_history">Historie</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="user_name">Hallo User</string>
    <string name="not_registered">Sie sind noch nicht registriert?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Registrieren</string>
    <string name="password_confirm">Passwort bestätigen</string>
    <string name="title_activity_screen_slider_page">ScreenSliderPageActivity</string>
    <string name="title_activity_screen_slider_page_fragment">ScreenSliderPageFragment</string>
    <string name="participate">teilnehmen</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="save_login">logindaten merken</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_search">activity_search</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="male">männlich</string>
    <string name="female">weiblich</string>
    <string name="date">Zeit</string>
    <string name="from_date">von Datum</string>
    <string name="to_date">bis Datum</string>
    <string name="from_time">von Uhrzeit</string>
    <string name="to_time">bis Uhrzeit</string>
    <string name="description">Beschreibung</string>
    <string name="participants">Anzahl</string>s
    <string name="create">erstellen</string>
    <string name="gender">Geschlecht</string>
    <string name="activity_type">Aktivität</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="search">suchen</string>
    <string name="feedback">bewerten</string>
    <string name="title_activity_activity_report">activity_report</string>
    <string name="reason">Ursache</string>
    <string name="report_description">Fehlerbeschreibung</string>
    <string name="report_button">Melden</string>
    <string name="profil_button">Account Deaktivieren</string>

</resources>
