<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.philipp.meetability.Aktivitys.ReportActivity"
    android:background="@drawable/wood">

    <item android:id="@+id/action_bugreport"
        android:title="@string/action_bugreport"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_userreport"
        android:title="@string/action_userreport"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
