<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.philipp.meetability.RegisterActivity"
    android:background="@drawable/background_style">

    <TextView
        android:id="@+id/tvRegistrieren"
        android:text="@string/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30dip"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvEMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:layout_below="@+id/tvRegistrieren"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_below="@+id/tvEMail"
        android:layout_centerHorizontal="true"
        android:hint="E-Mail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/tvPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_below="@+id/tvPassword"
        android:layout_alignEnd="@+id/etEmail"
        android:hint="Passwort"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPasswordConfirm"
        android:layout_below="@+id/etPassword"
        android:layout_alignEnd="@+id/etPassword"
        android:hint="@string/password_confirm"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40pt"
        android:text="@string/register"
        android:id="@+id/btRegister"
        android:background="@drawable/button_style"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
