<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.philipp.meetability.Aktivitys.ReportActivity"
    android:orientation="vertical"
    android:background="@drawable/wood">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="40">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

       <TableLayout
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:layout_weight="2">

           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/reason"
               android:textStyle="bold"
               android:textColor="#ffffff"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:textAlignment="center"/>

           <Spinner
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:id="@+id/spActivityType"
               android:spinnerMode="dropdown"
               android:gravity="center"
               android:entries="@array/reasons_userreport"
               android:background="@drawable/edittext"/>

       </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="20">



                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_description"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textAlignment="center"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/etDescription"
                    android:background="@drawable/edittext"
                    android:textColor="#ffffff"
                    android:textSize="18dp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/search"
            android:id="@+id/btSearch"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/register_login_button"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
