
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.philipp.meetability.CreateActivity"
    android:orientation="vertical"
    android:background="@drawable/wood">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/activity_type"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="5"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/gender"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="5"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/tvActivityType"
                android:layout_weight="5"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/tvGender"
                android:spinnerMode="dropdown"
                android:gravity="center"
                android:layout_weight="5"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Location"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/participants"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_weight="5"/>

            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/tvLocation"
                android:textColor="#ffffff"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/tvParticipants"
                android:textColor="#ffffff"
                android:layout_weight="5"/>
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/date"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:id="@+id/tvTime" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:background="@drawable/edittext">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvFromDate"
                        android:text="30.12.2015"
                        android:textColor="#ffffff"
                        android:layout_weight="5"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvToDate"
                        android:textColor="#ffffff"
                        android:text="12.01.2016"
                        android:layout_weight="5"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvFromTime"
                        android:textColor="#ffffff"
                        android:text="13:25"
                        android:layout_weight="5"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etToTime"
                        android:textColor="#ffffff"
                        android:text="15:00"
                        android:layout_weight="5"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:layout_marginTop="11dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tvDescription"
                android:background="@drawable/edittext"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/participate"
            android:id="@+id/btCreate"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/register_login_button"/>
    </LinearLayout>

</LinearLayout>
